feat: Se desarrolla proceso de registro de vinculaciones con cálculo de valor del contrato y registro de rubros seleccionados. udistrital/resoluciones_cliente_v2#11
