# models/objeto_previnculaciones.go
@@ -1,0 +1,9 @@
+package models
+
+type ObjetoPrevinculaciones struct {
+	Docentes       []CargaLectiva
+	ResolucionData *ResolucionVinculacionDocente
+	NumeroSemanas  int
+	Vigencia       int
+	Disponibilidad []DocumentoPresupuestal
+}
