# models/vinculaciones.go
@@ -4,6 +4,8 @@ type Vinculaciones struct {
 	Id                   int
 	Nombre               string
 	PersonaId            float64
+	TipoDocumento        string
+	ExpedicionDocumento  string
 	NumeroContrato       string
 	Vigencia             int
 	Categoria            string
@@ -11,6 +13,7 @@ type Vinculaciones struct {
 	NumeroHorasSemanales int
 	NumeroSemanas        int
 	Disponibilidad       int
+	RegistroPresupuestal int
 	ValorContratoFormato string
 	ProyectoCurricularId int
 }
