# swagger/swagger.json
@@ -598,16 +598,16 @@
                 "tags": [
                     "gestion_vinculaciones"
                 ],
-                "description": "create Gestion_vinculaciones",
-                "operationId": "GestionVinculacionesController.Create",
+                "description": "Registra las vinculaciones calculando los valores del contrato",
+                "operationId": "GestionVinculacionesController.Create Vinculaciones",
                 "parameters": [
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "body for Gestion_vinculaciones content",
+                        "description": "body for ObjetoPrevinculaciones content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Gestion_vinculaciones"
+                            "$ref": "#/definitions/models.ObjetoPrevinculaciones"
                         }
                     }
                 ],
@@ -615,11 +615,48 @@
                     "201": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/models.Gestion_vinculaciones"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.ObjetoPrevinculaciones"
+                            }
                         }
                     },
-                    "403": {
-                        "description": "body is empty"
+                    "400": {
+                        "description": "bad request"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/gestion_vinculaciones/calcular_valor_contratos_seleccionados": {
+            "post": {
+                "tags": [
+                    "gestion_vinculaciones"
+                ],
+                "description": "Calcula el valor total de los contratos seleccionados",
+                "operationId": "GestionVinculacionesController.CalcularValorContratosSeleccionados",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for vinculaciones content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ObjetoPrevinculaciones"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{string} Valor total de los contratos seleccionados"
+                    },
+                    "400": {
+                        "description": "bad request"
+                    },
+                    "500": {
+                        "description": "Internal server error"
                     }
                 }
             }
@@ -824,11 +861,11 @@
         }
     },
     "definitions": {
-        "4966.\u003cnil\u003e.CancelacionContrato": {
+        "5441.\u003cnil\u003e.CancelacionContrato": {
             "title": "CancelacionContrato",
             "type": "object"
         },
-        "5132.\u003cnil\u003e.ContratoVinculacion": {
+        "5607.\u003cnil\u003e.ContratoVinculacion": {
             "title": "ContratoVinculacion",
             "type": "object"
         },
@@ -857,9 +894,6 @@
                 "DependenciaAcademica": {
                     "type": "integer",
                     "format": "int64"
-                },
-                "Emerito": {
-                    "type": "boolean"
                 },
                 "IDCategoria": {
                     "type": "string"
@@ -965,6 +999,49 @@
                 }
             }
         },
+        "models.DocumentoPresupuestal": {
+            "title": "DocumentoPresupuestal",
+            "type": "object",
+            "properties": {
+                "Afectacion": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.MovimientoRubro"
+                    }
+                },
+                "AfectacionIds": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "Consecutivo": {
+                    "type": "number",
+                    "format": "double"
+                },
+                "Estado": {
+                    "type": "string"
+                },
+                "FechaRegistro": {
+                    "type": "string"
+                },
+                "Tipo": {
+                    "type": "string"
+                },
+                "ValorActual": {
+                    "type": "number",
+                    "format": "double"
+                },
+                "ValorInicial": {
+                    "type": "number",
+                    "format": "double"
+                },
+                "Vigencia": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
         "models.ExpedicionCancelacion": {
             "title": "ExpedicionCancelacion",
             "type": "object",
@@ -978,7 +1055,7 @@
                     "format": "int64"
                 },
                 "Vinculaciones": {
-                    "$ref": "#/definitions/4966.\u003cnil\u003e.CancelacionContrato"
+                    "$ref": "#/definitions/5441.\u003cnil\u003e.CancelacionContrato"
                 }
             }
         },
@@ -995,13 +1072,39 @@
                     "format": "int64"
                 },
                 "Vinculaciones": {
-                    "$ref": "#/definitions/5132.\u003cnil\u003e.ContratoVinculacion"
+                    "$ref": "#/definitions/5607.\u003cnil\u003e.ContratoVinculacion"
                 }
             }
         },
-        "models.Gestion_vinculaciones": {
-            "title": "Gestion_vinculaciones",
-            "type": "object"
+        "models.MovimientoRubro": {
+            "title": "MovimientoRubro",
+            "type": "object",
+            "properties": {
+                "Estado": {
+                    "type": "string"
+                },
+                "FechaRegistro": {
+                    "type": "string"
+                },
+                "IDPsql": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Padre": {
+                    "type": "string"
+                },
+                "Tipo": {
+                    "type": "string"
+                },
+                "ValorActual": {
+                    "type": "number",
+                    "format": "double"
+                },
+                "ValorInicial": {
+                    "type": "number",
+                    "format": "double"
+                }
+            }
         },
         "models.ObjetoDesagregado": {
             "title": "ObjetoDesagregado",
@@ -1013,8 +1116,40 @@
                 "Dedicacion": {
                     "type": "string"
                 },
+                "EsDePlanta": {
+                    "type": "boolean"
+                },
                 "NivelAcademico": {
                     "type": "string"
+                },
+                "Vigencia": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
+        "models.ObjetoPrevinculaciones": {
+            "title": "ObjetoPrevinculaciones",
+            "type": "object",
+            "properties": {
+                "Disponibilidad": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.DocumentoPresupuestal"
+                    }
+                },
+                "Docentes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CargaLectiva"
+                    }
+                },
+                "NumeroSemanas": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "ResolucionData": {
+                    "$ref": "#/definitions/models.ResolucionVinculacionDocente"
                 },
                 "Vigencia": {
                     "type": "integer",
@@ -1178,6 +1313,9 @@
                     "type": "integer",
                     "format": "int64"
                 },
+                "ExpedicionDocumento": {
+                    "type": "string"
+                },
                 "Id": {
                     "type": "integer",
                     "format": "int64"
@@ -1203,6 +1341,13 @@
                 "ProyectoCurricularId": {
                     "type": "integer",
                     "format": "int64"
+                },
+                "RegistroPresupuestal": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "TipoDocumento": {
+                    "type": "string"
                 },
                 "ValorContratoFormato": {
                     "type": "string"
